crates/pg_syntax/tests/snapshots/postgres_regress/date@234.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'infinity'::date > 'today'::date as t;"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    AExpr@7..39
      TypeCast@7..23
        AConst@7..17
          Sconst@7..17 "'infinity'"
        Typecast@17..19 "::"
        TypeName@19..23
          Ident@19..23 "date"
      Whitespace@23..24 " "
      Ascii62@24..25 ">"
      Whitespace@25..26 " "
      TypeCast@26..39
        AConst@26..33
          Sconst@26..33 "'today'"
        Typecast@33..35 "::"
        TypeName@35..39
          Ident@35..39 "date"
    Whitespace@39..40 " "
    As@40..42 "as"
    Whitespace@42..43 " "
    Ident@43..44 "t"
  Ascii59@44..45 ";"

