crates/pg_syntax/tests/snapshots/postgres_regress/date@236.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select isfinite('infinity'::date), isfinite('-infinity'::date), isfinite('today'::date);"
---
SelectStmt@0..88
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    FuncCall@7..32
      Ident@7..15 "isfinite"
      Ascii40@15..16 "("
      TypeCast@16..32
        AConst@16..26
          Sconst@16..26 "'infinity'"
        Typecast@26..28 "::"
        TypeName@28..32
          Ident@28..32 "date"
  Ascii41@32..33 ")"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  ResTarget@35..61
    FuncCall@35..61
      Ident@35..43 "isfinite"
      Ascii40@43..44 "("
      TypeCast@44..61
        AConst@44..55
          Sconst@44..55 "'-infinity'"
        Typecast@55..57 "::"
        TypeName@57..61
          Ident@57..61 "date"
  Ascii41@61..62 ")"
  Ascii44@62..63 ","
  Whitespace@63..64 " "
  ResTarget@64..86
    FuncCall@64..86
      Ident@64..72 "isfinite"
      Ascii40@72..73 "("
      TypeCast@73..86
        AConst@73..80
          Sconst@73..80 "'today'"
        Typecast@80..82 "::"
        TypeName@82..86
          Ident@82..86 "date"
  Ascii41@86..87 ")"
  Ascii59@87..88 ";"

