crates/pg_syntax/tests/snapshots/postgres_regress/date@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT date 'January 8, 1999';"
---
SelectStmt@0..30
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..30
    Ident@7..11 "date"
    Whitespace@11..12 " "
    TypeCast@12..30
      AConst@12..29
        Sconst@12..29 "'January 8, 1999'"
      Ascii59@29..30 ";"

