crates/pg_syntax/tests/snapshots/postgres_regress/date@258.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select make_time(8, 20, 0.0);"
---
SelectStmt@0..29
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..27
    FuncCall@7..27
      Ident@7..16 "make_time"
      Ascii40@16..17 "("
      AConst@17..18
        Iconst@17..18 "8"
      Ascii44@18..19 ","
      Whitespace@19..20 " "
      AConst@20..22
        Iconst@20..22 "20"
      Ascii44@22..23 ","
      Whitespace@23..24 " "
      AConst@24..27
        Fconst@24..27 "0.0"
  Ascii41@27..28 ")"
  Ascii59@28..29 ";"

