crates/pg_syntax/tests/snapshots/postgres_regress/date@260.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select make_date(2013, 2, 30);"
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..16 "make_date"
      Ascii40@16..17 "("
      AConst@17..21
        Iconst@17..21 "2013"
      Ascii44@21..22 ","
      Whitespace@22..23 " "
      AConst@23..24
        Iconst@23..24 "2"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..28
        Iconst@26..28 "30"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

