crates/pg_syntax/tests/snapshots/postgres_regress/date@261.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select make_date(2013, 13, 1);"
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..16 "make_date"
      Ascii40@16..17 "("
      AConst@17..21
        Iconst@17..21 "2013"
      Ascii44@21..22 ","
      Whitespace@22..23 " "
      AConst@23..25
        Iconst@23..25 "13"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..28
        Iconst@27..28 "1"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

