crates/pg_syntax/tests/snapshots/postgres_regress/date@264.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select make_time(24, 0, 2.1);"
---
SelectStmt@0..29
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..27
    FuncCall@7..27
      Ident@7..16 "make_time"
      Ascii40@16..17 "("
      AConst@17..19
        Iconst@17..19 "24"
      Ascii44@19..20 ","
      Whitespace@20..21 " "
      AConst@21..22
        Iconst@21..22 "0"
      Ascii44@22..23 ","
      Whitespace@23..24 " "
      AConst@24..27
        Fconst@24..27 "2.1"
  Ascii41@27..28 ")"
  Ascii59@28..29 ";"

